# ANT-Stock

./: .gitignore  README.md  requirements.txt  subir_servers.txt
Back/: .env.example  README.md  alembic.ini  main.py  pyproject.toml  seed_inicial.py  test_db_connection.py
Back/alembic/: env.py  script.py.mako
Back/alembic/versions/: 20260509_0001_initial.py
Back/app/: __init__.py
Back/app/api/: router.py
Back/app/autenticacao/: __init__.py  cliente.py  contas.py  conversores.py  dependencias.py  seguranca.py
Back/app/auth/: __init__.py  cliente.py  contas.py  conversores.py  dependencias.py  esquemas.py  seguranca.py  servico.py
Back/app/core/: __init__.py  config.py  rate_limit.py
Back/app/db/: __init__.py  client.py
Back/app/models/: __init__.py  base.py  categoria.py  estoque.py  localizacao.py  movimentacao.py  produto.py  usuario.py
Back/src/: __init__.py  main.py
Back/src/api/: __init__.py  dependencias.py  dependencies.py  deps.py  roteador.py  router.py  routes.py
Back/src/banco/: __init__.py  sessao.py  supabase.py
Back/src/core/: auth.py  config.py  errors.py  exceptions.py  log.py  logging.py  security.py
Back/src/database/: __init__.py  db.py  session.py  supabase.py
Back/src/esquemas/: __init__.py  autenticacao.py  base.py  estoque.py  pedido.py
Back/src/intermediarios/: __init__.py  requisicao.py
Back/src/middlewares/: __init__.py  request.py  request_id.py
Back/src/modelos/: __init__.py  autenticacao.py  base.py  estoque.py  pedido.py
Back/src/models/: __init__.py  base.py  user.py  (+3 more)
Back/supabase/: README.md  seed.sql
(+210 files in other folders)
